Tutorial high contrast bugs (#9309)
* fix card class colliding with fa icon name

* fix bubbles too

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -574,7 +574,7 @@
     }
 
     /* Cards */
-    .card {
+    .card:not(.icon) {
         background: @HCbackground !important;
         border: 2px solid @HCtextColor !important;
         border-radius: initial !important;
@@ -866,6 +866,9 @@
     }
     .tutorial-step-label { color: @HCtextColor; }
     .tutorial-step-bar-fill { background-color: @HCtextColor; }
+    .tutorial-step-bubbles > button {
+        border: 1px solid @HCtextColor;
+    }
 
     #editorSidebar .tab-navigation {
         color: @HCtextColor;
